--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -106,6 +106,7 @@ header > div:last-child a {
     display: flex;
     gap: 10px;
     color: #000;
+    background-color: #fff;
     padding: 15px;
     transition: .4s;
 }
