--- a/styles/pages/message.css
+++ b/styles/pages/message.css
@@ -4,27 +4,6 @@ header {
     padding: 0 14%;
 }
 
-* {
-    scrollbar-width: auto;
-    scrollbar-color: #ebebeb #ffffff;
-}
-*::-webkit-scrollbar {
-    width: 9px;
-}
-
-*::-webkit-scrollbar-track {
-    background: #ffffff;
-}
-
-*::-webkit-scrollbar-thumb {
-    background-color: #ebebeb;
-    border-radius: 10px;
-    border: 3px solid #ffffff;
-}
-.red-text { 
-    color: #fe2c55;
-}
-
 section {
     display: flex;
     justify-content: space-between;
@@ -50,7 +29,7 @@ section {
     overflow: hidden;
 }
 #messages:hover {
-    overflow-y: scroll;
+    overflow-y: overlay;
 }
 .message-item {
     display: flex;
@@ -143,7 +122,7 @@ section {
     gap: 15px;
 }
 #all-messages-from:hover {
-    overflow-y: scroll;
+    overflow-y: overlay;
 }
 #all-messages-from > div {
     display: flex;
