--- a/styles/pages/recomend.css
+++ b/styles/pages/recomend.css
@@ -1,31 +1,9 @@
 @import url("../components/header.css");
+@import url("../components/section-left.css");
 
 header {
     padding: 0 14%;
 }
-
-
-* {
-    scrollbar-width: auto;
-    scrollbar-color: #ebebeb #ffffff;
-}
-*::-webkit-scrollbar {
-    width: 9px;
-}
-
-*::-webkit-scrollbar-track {
-    background: #ffffff;
-}
-
-*::-webkit-scrollbar-thumb {
-    background-color: #ebebeb;
-    border-radius: 10px;
-    border: 3px solid #ffffff;
-}
-.red-text { 
-    color: #fe2c55;
-}
-
 section {
     padding: 0 0 0 14%;
     display: flex;
@@ -33,86 +11,15 @@ section {
     justify-content: space-between;
 }
 #section-left {
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    padding: 25px 0;
     width: 25%;
-    overflow: hidden;
-    transition: .4s;
 }
-#section-left:hover {
-    overflow-y: scroll;
-}
-#main-left-menu {
-    display: flex;
-    flex-direction: column;
-    gap: 14px;
-}
-.side-menu {
-    display: flex;
-    align-items: center;
-    gap: 5px;
-    font-weight: 700;
-    color: #000;
-}
-.side-line {
-    display: flex;
-    width: 98%;
-    border-bottom: 0.5px solid #1618231F;
-}
-.side-account {
-    display: flex;
-}
-.main-left-recomendation {
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-}
-.main-left-recomendation > p {
-    font-size: 14px;
-    font-weight: 500;
-}
-.main-left-recomendation > p:last-child {
+#main-left-menu a:first-child p {
     color: #fe2c55;
-    font-weight: 600;
 }
-.side-account {
-    display: flex;
-    gap: 10px;
+#main-left-menu a:first-child svg {
+    filter: invert(33%) sepia(66%) saturate(5384%) hue-rotate(332deg) brightness(101%) contrast(99%);
 }
-.side-account h6 {
-    display: flex;
-    align-items: center;
-    gap: 4px;
-    font-size: 16px;
-}
-.side-account p {
-    font-size: 12px;
-    color: #161823BF;
-}
-#section-left footer {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-}
-#section-left footer p {
-    font-size: 10px;
-    font-weight: 500;
-}
-#section-left footer > span {
-    display: flex;
-    flex-direction: column;
-    gap: 5px;
-}
-#section-left footer > span > span {
-    display: flex;
-    gap: 5px;
-}
-#section-left footer span p:hover {
-    cursor: pointer;
-    text-decoration: underline;
-}
+
 #section-right {
     width: 69%;
     padding: 4% 0;
@@ -122,7 +29,7 @@ section {
     overflow: hidden;
 }
 #section-right:hover {
-    overflow-y: scroll;
+    overflow-y: overlay;
 }
 .right--item {
     display: flex;
@@ -133,7 +40,12 @@ section {
     width: 55px;
     height: 55px;
     border-radius: 100%;
-    background-color: #6c6c6c;
+    /* background-color: #6c6c6c; */
+}
+.item-author-avatar img {
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 .item-video {
     display: flex;
@@ -176,10 +88,19 @@ section {
     width: 16px;
 }
 
-.subscribe-btn {
+.subscribe-btn-false {
     background-color: transparent;
-    border: 1px solid rgba(254, 44, 85, 1);
-    color: rgba(254, 44, 85, 1);
+    border: 1px solid #fe2c55;
+    color: #fe2c55;
+    padding: 10px;
+    height: 25px;
+    font-weight: 600;
+    border-radius: 4px;
+}
+.subscribe-btn-true {
+    background-color: transparent;
+    border: 1px solid #6c6c6c;
+    color: #6c6c6c;
     padding: 10px;
     height: 25px;
     font-weight: 600;
