--- a/styles/pages/search.css
+++ b/styles/pages/search.css
@@ -1,139 +1,7 @@
-* {
-    scrollbar-width: auto;
-    scrollbar-color: #ebebeb #ffffff;
-}
-*::-webkit-scrollbar {
-    width: 9px;
-}
-
-*::-webkit-scrollbar-track {
-    background: #ffffff;
-}
-
-*::-webkit-scrollbar-thumb {
-    background-color: #ebebeb;
-    border-radius: 10px;
-    border: 3px solid #ffffff;
-}
-.red-text { 
-    color: #fe2c55;
-}
-
+@import url("../components/header.css");
 
 header {
-    display: flex;
-    justify-content: space-between;
     padding: 0 14%;
-    align-items: center;
-    height: 60px;
-    box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
-}
-header > a:first-child img {
-    width: 120px;
-}
-header > div:nth-child(2) {
-    display: flex;
-    background-color: #f1f1f2;
-    height: 45px;
-    width: 361px;
-    border-radius: 30px;
-    padding: 10px 5px;
-}
-header > div:nth-child(2) input {
-    width: 100%;
-    padding: 0 10px;
-    background-color: transparent;
-    border: none;
-    outline: none;
-}
-header > div:nth-child(2) input::placeholder {
-    font-size: 14px;
-    font-weight: 500;
-}
-header > div:nth-child(2) a {
-    width: 52px;
-    background-color: transparent;
-    border: none;
-    border-left: 1px solid rgba(22, 24, 35, .12);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-header > div:nth-child(2) a img {
-    width: 40%;
-    filter: invert(59%) sepia(0%) saturate(550%) hue-rotate(91deg) brightness(104%) contrast(82%);
-}
-header > div:last-child {
-    display: flex;
-    align-items: center;
-    gap: 20px;
-}
-.new-video-btn {
-    height: 36px;
-    width: 135px;
-    background-color: #fff;
-    display: flex;
-    gap: 5px;
-    font-size: 16px;
-    font-weight: 500;
-    border: 1px solid rgba(22, 24, 35, 0.12);
-    color: #000;
-    justify-content: center;
-}
-.new-video-btn svg {
-    width: 20px;
-}
-header > div:last-child a {
-    display: flex;
-    align-items: center;
-    color: #000;
-}
-.account-avatar {
-    display: block;
-    background-color: #6c6c6c;
-    border-radius: 100%;
-    width: 30px;
-    height: 30px;
-}
-#header-account-avatar {
-    display: flex;
-    width: 30px;
-    height: 30px;
-    border-radius: 100%;
-    margin-left: 5px;
-    background-color: #6c6c6c;
-    position: relative;
-}
-#header-account-avatar:hover #avatar-dropdown {
-    display: flex;
-    z-index: 10;
-}
-#avatar-dropdown {
-    position: absolute;
-    display: none;
-    flex-direction: column;
-    gap: 0;
-    background-color: #fff;
-    padding: 5px 0;
-    top: 20px;
-    right: -10px;
-    box-shadow: 0px 0px 10px 3px rgba(34, 60, 80, 0.25);
-    border-radius: 5px;
-}
-#avatar-dropdown a {
-    width: 250px;
-    display: flex;
-    gap: 10px;
-    color: #000;
-    padding: 15px;
-    transition: .4s;
-}
-#avatar-dropdown a:hover {
-    background-color: #ededed;
-}
-#avatar-dropdown a p {
-    font-size: 14px;
-    font-weight: 600;
 }
 
 section {
@@ -152,7 +20,7 @@ section {
     transition: .4s;
 }
 #section-left:hover {
-    overflow-y: scroll;
+    overflow-y: overlay;
 }
 #main-left-menu {
     display: flex;
@@ -232,7 +100,7 @@ section {
     gap: 20px;
 }
 #section-right:hover {
-    overflow-y: scroll;
+    overflow-y: overlay;
 }
 #finded-accounts { 
     display: flex;
