--- a/styles/pages/message.css
+++ b/styles/pages/message.css
@@ -9,7 +9,7 @@ section {
     justify-content: space-between;
     padding: 1% 14%;
     background-color: #f8f8f8;
-    max-height: calc(100vh - 60px);
+    height: calc(100vh - 60px);
 }
 #message-from {
     display: flex;
@@ -37,6 +37,7 @@ section {
     padding: 8px 20px;
     transition: .1s;
     position: relative;
+    color: #000;
 }
 .message-item > img {
     position: absolute;
@@ -56,6 +57,12 @@ section {
     width: 55px;
     height: 55px;
     background-color: #6c6c6c;
+    border-radius: 100%;
+}
+.messager-avatar img {
+    display: block;
+    width: 100%;
+    height: 100%;
     border-radius: 100%;
 }
 .message-item > div {
@@ -100,6 +107,12 @@ section {
     width: 48px;
     height: 48px;
     background-color: #6c6c6c;
+    border-radius: 100%;
+}
+#messager-info > span:first-child img {
+    display: block;
+    width: 100%;
+    height: 100%;
     border-radius: 100%;
 }
 #messager-info > span:last-child {
