--- a/styles/components/section-left.css
+++ b/styles/components/section-left.css
@@ -10,6 +10,12 @@
 #section-left:hover {
     overflow-y: overlay;
 }
+#section-left .account-avatar img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    border-radius: 100%;
+}
 #main-left-menu {
     display: flex;
     flex-direction: column;
