--- a/styles/pages/newVideo.css
+++ b/styles/pages/newVideo.css
@@ -44,7 +44,7 @@ section:hover {
 }
 #select-video {
     margin-top: 22px;
-    border: 2px dashed rgba(22, 24, 35, 0.2);
+    border: 2px dashed #16182333;
     display: flex;
     flex-direction: column;
     align-items: center;
